      now remapped as an entry point to \code{Rf_logspace_sum}, and its
      first argument has gained a \code{const} qualifier.

      Code using it will need to be reinstalled. (\PR{16470})

      \item \code{R_GE_version} has been increased to \code{11}.

      \item New API call \code{R_orderVector1()}, a faster
      one-argument version of \code{R_orderVector()}.
      
      \item There is a new macro, \code{USE_CXX_HEADERS}, which if set
      causes \R{} headers Such as \file{R.h} and \file{Rmath.h} when
      called from C++ code in packages to include the C++ versions of
      system headers such as \file{<cmath>} rather than the C versions.
      (Header \file{Rinternals.h} always did.)

      This is currently optional but is intended to become the default
      before release.  The manual has long said that \R{} headers should
      \bold{not} be included within an \code{extern "C"} block, and this
      change increases the chance of compilation errors if that is done.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item C-level \code{asChar(x)} is fixed for when \code{x} is not a
      vector, and it returns \code{"TRUE"}/\code{"FALSE"} instead of
      \code{"T"}/\code{"F"} for logical vectors.

      \item The first arguments of \code{.colSums()} etc (with an
      initial dot) are now named \code{x} rather than \code{X} (matching
      \code{colSums()}): thus error messages are corrected.

      \item A \code{coef()} method for class \code{"maov"} has been
      added to allow \code{vcov()} to work with multivariate
      results. (\PR{16380})

      \item \code{method = "libcurl"} connections signal errors rather
      than retrieving HTTP error pages (where the ISP reports the
      error).

      \item \code{xpdrows.data.frame()} was not checking for unique
      row names; in particular, this affected assignment to non-existing
      rows via numerical indexing. (\PR{16570})
